@@ -60,6 +60,7 @@ analyze(
   osc = "linear",
   osc_dB = NULL,
   pitchPlot = list(col = rgb(0, 0, 1, 0.75), lwd = 3, showPrior = TRUE),
+  extraContour = NULL,
   ylim = NULL,
   xlab = "Time",
   ylab = "Frequency",
@@ -244,6 +245,10 @@ osc; linear = on the original scale; dB = in decibels}
 \item{pitchPlot}{a list of graphical parameters for displaying the final
 pitch contour. Set to \code{list(type = 'n')} to suppress}
 
+\item{extraContour}{a vector of arbitrary length scaled in Hz that will be
+plotted over the spectrogram (eg pitch contour); can also be a list with
+extra graphical parameters such as lwd, col, etc. (see examples)}
+
 \item{ylim}{frequency range to plot, kHz (defaults to 0 to Nyquist frequency)}
 
 \item{xlab, ylab, main}{plotting parameters}
@@ -396,6 +401,7 @@ a = analyze(sound1, samplingRate = 44100,
   priorMean = NA,  # no prior info at all
   pitchDom = list(col = 'red', domThres = .25),
   pitchPlot = list(col = 'black', lty = 3, lwd = 3),
+  extraContour = list(x = 'peakFreq', type = 'b', col = 'brown'),
   osc = 'dB', heights = c(2, 1))
 
 # Different options for summarizing the output
